fuzzers/baby_no_std/log
   Compiling stable_deref_trait v1.2.0
   Compiling byteorder v1.4.3
   Compiling cfg-if v1.0.0
   Compiling scopeguard v1.1.0
   Compiling regex-syntax v0.6.25
   Compiling postcard-cobs v0.1.5-pre
   Compiling once_cell v1.8.0
   Compiling alloc-traits v0.1.1
   Compiling tuple_list v0.1.2 (https://github.com/domenukk/tuple_list#9d1b7358)
   Compiling xxhash-rust v0.8.2
   Compiling static_assertions v1.1.0
   Compiling libc v0.2.98
   Compiling typenum v1.13.0
   Compiling serde v1.0.126
   Compiling memchr v2.4.0
   Compiling bitflags v1.2.1
   Compiling heapless v0.5.6
   Compiling erased-serde v0.3.16
   Compiling lock_api v0.4.4
   Compiling hash32 v0.1.1
   Compiling static-alloc v0.2.3
   Compiling num-traits v0.2.14
   Compiling num-integer v0.1.44
   Compiling num-iter v0.1.42
   Compiling num-rational v0.4.0
   Compiling generic-array v0.14.4
   Compiling ahash v0.7.4
   Compiling aho-corasick v0.7.18
   Compiling generic-array v0.13.3
   Compiling generic-array v0.12.4
   Compiling num-complex v0.4.0
   Compiling getrandom v0.2.3
   Compiling uds v0.2.6
   Compiling nix v0.20.0
   Compiling regex v1.5.4
   Compiling as-slice v0.1.5
   Compiling const-random v0.1.13
   Compiling num_enum v0.5.1
   Compiling libafl v0.5.0 (/home/andrea/Desktop/LibAFL/libafl)
   Compiling ahash v0.4.7
   Compiling num v0.4.0
   Compiling hashbrown v0.9.1
   Compiling postcard v0.5.2
   Compiling baby_fuzzer v0.5.0 (/home/andrea/Desktop/LibAFL/fuzzers/baby_no_std)
error[E0152]: found duplicate lang item `panic_impl`
  --> src/main.rs:28:1
   |
28 | fn panic(_info: &PanicInfo) -> ! {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the lang item is first defined in crate `std` (which `nix` depends on)
   = note: first definition in `std` loaded from /home/andrea/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/lib/libstd-37fdd654777c296f.so, /home/andrea/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/lib/libstd-37fdd654777c296f.rlib
   = note: second definition in the local crate (`baby_fuzzer`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0152`.
error: could not compile `baby_fuzzer`

To learn more, run the command again with --verbose.
